app/stylesheets/alchemy/admin/clipboard.scss
#clipboard_items {
  ul {
    list-style-type: none;
    margin: 0 0 var(--spacing-2);
    padding: 0;
    height: 220px;
    overflow-y: auto;
    overflow-x: hidden;

    li {
      display: flex;
      align-items: center;
      gap: var(--spacing-2);
      padding: var(--spacing-2);
      border: var(--border-default);
      background-color: var(--sitemap-page-background-color);
      border-radius: var(--border-radius_medium);

      &.elements {
        background-color: var(--element-editor-background-color);
      }

      .button_to {
        margin-left: auto;
      }
    }
  }
}

